# Slopsentinel

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASING.md  SECURITY.md  action.yml  codecov.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  false_positive.yml  feature_request.yml
.github/workflows/: action-smoke.yml  ci.yml  release-action-image.yml  release-pypi.yml
demo/: README.md  bad_code.py  pyproject.toml  record_demo.sh  render_demo_svgs.py
docs/: ARCHITECTURE.md  RULES.md  case-studies.md  faq.md  ide-integration.md  performance.md  plugin-guide.md  quickstart.md  scoring.md
examples/: README.md
examples/custom-reporter/: README.md  custom_markdown.py
examples/plugin-openai-slop/: README.md  pyproject.toml
examples/plugin-openai-slop/src/openai_slop_rules/: __init__.py  rules.py
examples/plugin-openai-slop/tests/: test_rules.py
examples/plugin-security/: README.md  pyproject.toml
examples/plugin-security/src/slopsentinel_plugin_security/: __init__.py  rules.py
examples/plugin-security/tests/: test_rules.py
schemas/: slopsentinel-config.schema.json  slopsentinel-report.schema.json
src/slopsentinel/: __main__.py  action.py  action_github.py  action_markdown.py  action_sarif.py  audit.py  autofix.py  baseline.py  cache.py  cli.py  config.py  deslop.py  git.py  gitdiff.py  history.py  init.py  logging_utils.py  lsp.py  patterns.py  scanner.py  suppressions.py  utils.py  watch.py
src/slopsentinel/engine/: __init__.py  context.py  detection.py  scoring.py  tree_sitter.py  types.py
src/slopsentinel/languages/: __init__.py  registry.py
src/slopsentinel/reporters/: __init__.py  github.py  html_reporter.py  json_reporter.py  markdown.py  sarif.py  terminal.py
src/slopsentinel/rules/: __init__.py  base.py  claude.py  copilot.py  crossfile.py  cursor.py  examples.py  gemini.py  generic.py  plugins.py  polyglot.py  registry.py  utils.py
tests/: conftest.py  helpers.py  test_action_github_more_coverage.py  test_action_github_retry.py  test_action_helpers.py  test_action_main.py  test_action_markdown.py  test_action_more_coverage.py  test_action_sarif.py  test_audit_more_coverage.py  test_autofix.py  test_autofix_boolean_return.py  test_autofix_docstring_and_credentials.py  test_autofix_more_coverage.py  test_autofix_more_coverage2.py  test_baseline.py  test_baseline_more_coverage2.py  test_cache.py  test_cli_deslop_bulk.py  test_cli_explain.py  test_cli_init_and_diff.py  test_cli_logging.py  test_cli_more_coverage.py  test_cli_policy.py  test_cli_report_compare_ci.py  test_cli_rules.py  test_cli_scan_fix_baseline_trend.py  test_cli_watch.py  test_comment_utils.py  test_config.py  test_config_more_coverage.py  test_coverage_misc.py  test_deslop.py  test_deslop_more_coverage_phase102.py  test_directory_overrides.py  test_engine_and_reporters.py  test_git_more_coverage.py  test_gitdiff.py  test_gitdiff_more_coverage.py  test_history.py  (+48 more)
tests/bench/: bench_rules.py  bench_scan.py
tests/integration/: test_cache_invalidation.py  test_git_workflow.py
vscode-slopsentinel/: .vscodeignore  README.md  package.json  tsconfig.json  webpack.config.js
vscode-slopsentinel/src/: extension.ts  lspClient.ts
