[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "slopsentinel-openai-slop"
version = "0.0.0"
description = "Example SlopSentinel plugin rules for OpenAI API usage patterns."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["slopsentinel"]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/openai_slop_rules"]

